--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -1,3 +1,20 @@
+#intro {
+    font-size: initial;
+}
+
+#intro h1, h2, h3, h4, h5, h6{
+    margin: initial;
+    letter-spacing: initial;
+}
+
+.intro .slogan{
+    text-align: initial;
+}
+.intro .slogan h4{
+    color: initial;
+    text-shadow: initial;
+}
+
 body{
     overflow:hidden;
 }
@@ -5,6 +22,8 @@ body *{
     -webkit-font-smoothing: subpixel-antialiased; /* or antialiased; */
     -webkit-text-stroke: .10pt black; /* or 0.01em might be better */
 }
+
+
 
 .container{
     /*    width:100%;
@@ -17,7 +36,8 @@ body *{
 #map{
     /*width:90%;*/
     width: 100%;
-    height:560px;
+    height: 669px !important;
+    margin-top: -272px;
 }
 
 #loadScreen{
@@ -573,4 +593,29 @@ div.testpoint-thumbnail{
 
 body{
     font-family: "Open sans", "Verdana", sans-serif;
+}
+
+p.units{
+    display:inline-block;
+    /*font-size: 8pt;*/
+    margin: 0px;
+    line-height: 0px;
+}
+
+
+.leaflet-top{
+    top: 90px;
+}
+
+.bottom-left{
+    bottom: 2366;
+}
+
+.about-text{
+    width: 50%;
+}
+
+
+body{
+    overflow-y: auto;
 }
