--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -20,7 +20,7 @@ body{
 }
 body *{
     -webkit-font-smoothing: subpixel-antialiased; /* or antialiased; */
-    -webkit-text-stroke: .10pt black; /* or 0.01em might be better */
+/*    -webkit-text-stroke: .10pt black;  or 0.01em might be better */
 }
 
 
@@ -274,7 +274,7 @@ box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.8);
 .panel h3{
     margin-left:10px;
     color:#333333;
-    font-family: "Helvetica Neue", "Arial", "Helvetica", "sans-serif";
+    font-family: "Open sans", "Helvetica Neue", "Arial", "Helvetica", "sans-serif";
     font-size:16pt;
 }
 
@@ -284,9 +284,9 @@ box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.8);
     border-bottom-right-radius: 0px;
 
     width: 300px;
-    height: 90%;
+    height: 81%;
 
-    top: 16px;
+    top: 86px;
     right: 0px;
 
 
@@ -318,9 +318,10 @@ box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.8);
 #infoPanel>h3{
     /*font-size:14pt;*/
     line-height:8px;
-    font-weight:400;
-    text-shadow: 0px 0px 1px #000000;
+    font-weight:600;
+/*    text-shadow: 0px 0px 1px #000000;*/
     text-transform: capitalize;
+    margin-top: 12px;
 }
 /*#infoPane{
     font-family: "Helvetica Neue", "Arial", "Helvetica", "sans-serif";
@@ -368,7 +369,7 @@ panel .trigger.close .icon{
     display:flex;
     flex-flow:row wrap;
     min-width:400px;
-    max-width:920px;
+/*    max-width:920px;*/
     /*max-height: 400px;*/
 }
 
@@ -576,6 +577,8 @@ div.testpoint-thumbnail{
     font-size: 16px;
     line-height: 20px;
     max-width: 310px;
+    color: #000000;
+    font-weight: 400;
 }
 
 .not-available{
@@ -613,6 +616,21 @@ p.units{
 
 .about-text{
     width: 50%;
+}
+
+.item.description{
+    margin-top: 18px;
+}
+
+.navbar-brand h1{
+    background-color: rgba(103,176,209,0.6);
+    background-color: rgba(150,150,150,0.6);
+    color: #000000;
+    padding: 0px 10px;
+}
+.nav.navbar-nav{
+    background-color: rgba(103,176,209,0.6);
+    background-color: rgba(150,150,150,0.6);
 }
 
 
