--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -611,8 +611,31 @@ p.units{
     bottom: 2366;
 }
 
-.about-text{
-    width: 50%;
+
+#about .img-circle{
+    border-radius: 0px;
+}
+
+
+#about .col-md-3{
+    width: 20%;
+    padding: 0px;
+}
+
+.team.boxed-grey{
+    background: #ffffff;
+}
+
+.about-text .team.boxed-grey{
+    background-color: #f9f9f9;
+}
+
+#about .about-text{
+    width: 60%;
+}
+
+i.fa{
+    display: none;
 }
 
 
