responside UI; --work in progress--

--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -845,6 +845,12 @@ p.units{
         margin-bottom: 91px;
     }
 
+
+
+    #about .col-md-3{
+        width: 100%;
+    }
+
 }
 
 #splashScreen .units{
