--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -19,6 +19,12 @@
     text-shadow: initial;
 }
 
+@media(min-width: 768px){
+    .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
+/*        margin-top: -6px;*/
+    }
+}
+
 body{
     overflow:hidden;
 }
