--- a/css/panelstyle.css
+++ b/css/panelstyle.css
@@ -936,10 +936,11 @@ p.units{
 
 .frozen{
     pointer-events: none;
+/*    opacity: 0;*/
 }
 .timer-freezescreen{
     position: absolute;
-    top: 200px;
+    top: 30%;
     left: 50%;
     margin-left: -109px;
 /*    background-color: rgba(255,255,255,0.8);*/
